syntax = "proto3";

option go_package = "core/app/proto/pbCrontab";

import "google/protobuf/empty.proto";

package pbCrontab;

service crontab {
  rpc UpdateCurrencies (google.protobuf.Empty) returns (UpdateCurrenciesRes) {}
}

message UpdateCurrenciesRes {
  map <string, double> rates = 1; // Мапа ISO - курс
}
